# vulkan-opettelua

./: .gitignore  CMakeLists.txt  README.md  linux-install-dependencies.sh  windows-install-dependencies.ps1
cmake/: vulkanstuff.cmake
kolmio/: CMakeLists.txt  main.cc  shaders.conf  utils.hh
